# mytoml

./: .gitignore  404.html  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.md  index.html  mytoml.c  mytoml.h  sitemap.xml  tomlfy.h
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: 1-issue.yml  bug.yml  config.yml
.github/workflows/: docs.yml
docs/: CMakeLists.txt  README.md
docs/mkdocs/: mkdocs.yml
docs/mkdocs/docs/: index.md
examples/: CMakeLists.txt  basic.c  sample.c
samples/: CMakeLists.txt  basic.c
search/: search_index.json
tests/: CMakeLists.txt
